<resources>
    <string name="app_name">F1</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="f1_register">Register</string>
    <string name="maintitle">Main screen</string>
    <string name="login">Login</string>
    <string name="login_title">Login</string>
    <string name="BacktoMainBtn">Back</string>
    <string name="LoginTitle">TextView</string>
    <string name="LoggedInBtn">Login</string>
    <string name="nameTextField">Name</string>
    <string name="menutitletext">TextView</string>
</resources>